# cubrid-logtopbind-rs

./: .envrc  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
src/: db.rs  lib.rs  main.rs  parser.rs
src/db/: mod.rs
src/parser/: log_entry.rs  mod.rs  parse_line.rs
src/utils/: mod.rs  query_format.rs
test/: test-question-marks.sh
testdata/: deleted_entries.txt  extract_bind.sh
tests/: parse_big_line.rs  test_deleted_entries.sh
