[package]
name = "cubrid-logtopbind-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logtopbind"  # Your main binary name
path = "src/main.rs"

[[bin]]
name = "sqlite-rs"         # New SQLite binary name
path = "src/bin/sqlite.rs"

[dependencies]
anyhow = "1.0.95"
indicatif = "0.17.9"
regex = "1.11.1"
rusqlite = "0.33.0"
serde_json = "1.0.137"
