[package]
name = "cubrid-logtopbind-rs"
version = "0.1.8"
edition = "2021"
description = "A CLI Utility Tool for inspecting CUBRID Broker logtop.q"
license = "BSD"
repository = "https://github.com/vimkim/cubrid-logtopbind-rs"

[[bin]]
name = "logtopbind"  # Your main binary name
path = "src/main.rs"

[[bin]]
name = "logtopprint"            # Your main binary name
path = "src/bin/logtopprint.rs"

[[bin]]
name = "sqlite-rs"         # New SQLite binary name
path = "src/bin/sqlite.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
indicatif = "0.17.9"
lazy_static = "1.5.0"
regex = "1.11.1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde_json = "1.0.137"
sqlformat = "0.3.5"
